Scrollbar issue solved

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -178,3 +178,29 @@
   padding: 0;
   text-align: center;
 }
+
+
+
+.custom-scrollbar::-webkit-scrollbar {
+  height: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: hsl(var(--primary));
+  border-radius: 999px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: hsl(var(--primary));
+  color: rgba(255, 255, 255, 0.71);
+}
+
+/* Firefox */
+.custom-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: hsl(var(--primary))  rgba(255, 255, 255, 0.2);
+}
